# rustysearch

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: coverage.yml  docker.yml  rust.yml
src/: lib.rs  main.rs  search.rs  types.rs
src/analyze/: tokenizer.rs
src/cmd/: arguments.rs
src/config/: loader.rs
src/handler/: hello.rs  search.rs
src/handlers/: hello.rs  mod.rs  search.rs
src/search/: engine.rs
src/types/: app_state.rs  config.rs  index.rs  mod.rs
tests/: config_type_tests.rs  handler_hello_test.rs  hello_handler_tests.rs  rustysearch.rs  search_engine_tests.rs  search_handler_tests.rs  tokenizer.rs
