[package]
name = "rustysearch"
authors = ["Alex Wellnitz <moin@wellnitz-alex.de>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
unicode-segmentation = "^1"
regex = "^1"
md5 = "0.7.0"
tempfile = "3.8.0"
