[package]
name = "rustysearch"
authors = ["Alex Wellnitz <moin@wellnitz-alex.de>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bincode = "1.3.3"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
simple_on_shutdown = "1.0.0"
